--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -25,9 +25,10 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.0'
-    testCompile 'junit:junit:4.12'
     compile 'com.rengwuxian.materialedittext:library:2.1.4'
     compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+    compile 'com.android.support:design:24.2.0'
+    testCompile 'junit:junit:4.12'
 }
