--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -15,18 +15,17 @@
         </activity>
         <activity android:name=".ui.SignUpActivity" />
 
-        <activity android:name=".ui.HomeActivity">
+        <activity android:name=".ui.HomeActivity" android:launchMode="singleTop">
             <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-        </activity>
-
-        <activity android:name=".ui.SearchableActivity">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH"/>
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
+
             <meta-data android:name="android.app.searchable"
                 android:resource="@xml/searchable"/>
         </activity>
