--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.GetReviewsActivity"></activity>
+        <activity android:name=".ui.GetReviewsActivity" />
         <activity android:name=".ui.SignUpActivity" />
         <activity
             android:name=".ui.HomeActivity"
@@ -30,7 +30,8 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-        <activity android:name=".ui.LoginActivity"></activity>
+        <activity android:name=".ui.LoginActivity" />
+        <activity android:name=".ui.PostReviewsActivity"></activity>
     </application>
 
 </manifest>
