--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.5.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
     compile 'com.android.support:design:24.2.0'
+    compile 'com.iarcuschin:simpleratingbar:0.1.5'
     testCompile 'junit:junit:4.12'
 }
