--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -31,7 +31,13 @@
                 android:resource="@xml/searchable" />
         </activity>
         <activity android:name=".ui.LoginActivity" />
-        <activity android:name=".ui.PostReviewsActivity"></activity>
+        <activity
+            android:name=".ui.PostReviewsActivity"
+            android:parentActivityName=".ui.HomeActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.HomeActivity" />
+        </activity>
     </application>
 
 </manifest>
