--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -31,5 +31,9 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
     compile 'com.android.support:design:24.2.0'
     compile 'com.iarcuschin:simpleratingbar:0.1.5'
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+
+
     testCompile 'junit:junit:4.12'
 }
