--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -10,8 +10,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.GetReviewsActivity" />
+
+        <activity android:name=".ui.GetReviewsActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.HomeActivity" />
+        </activity>
+
         <activity android:name=".ui.SignUpActivity" />
+
         <activity
             android:name=".ui.HomeActivity"
             android:launchMode="singleTop">
@@ -25,14 +32,21 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
+
+
         <activity android:name=".ui.LoginActivity" />
+
+
+
         <activity
-            android:name=".ui.PostReviewsActivity"
-            android:parentActivityName=".ui.HomeActivity">
+            android:name=".ui.PostReviewsActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.HomeActivity" />
         </activity>
+
+
+
         <activity android:name=".ui.ServerAddressActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,6 +54,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.PostTopicsActivity"></activity>
     </application>
 
 </manifest>
