very old changes, don't know what I did

--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:theme="@style/AppTheme">
 
         <activity
+            android:launchMode="singleTask"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:name=".ui.GetReviewsActivity" >
             <meta-data
