changes for prod release

--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -18,25 +18,30 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.HomeActivity" />
+
         </activity>
 
         <activity
             android:name=".ui.SignUpActivity"
             android:noHistory="true"/>
 
+        <!--HOME ACTIVITY-->
         <activity
             android:name=".ui.HomeActivity"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
-
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
+        <!--HOME ACTIVITY ENDS-->
 
 
         <activity android:name=".ui.LoginActivity"
@@ -52,15 +57,6 @@
                 android:value=".ui.HomeActivity" />
         </activity>
 
-
-
-        <activity android:name=".ui.ServerAddressActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
 
         <activity
             android:noHistory="true"
