--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId "com.project.letsreview"
         minSdkVersion 15
@@ -32,6 +33,8 @@ dependencies {
     compile 'com.android.support:design:24.2.0'
     compile 'com.iarcuschin:simpleratingbar:0.1.5'
     compile 'com.getbase:floatingactionbutton:1.10.1'
+    compile 'com.google.android.gms:play-services-auth:9.8.0'
+
     // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 
