Google sign in working!

--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -25,6 +25,12 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+
+
+
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.rengwuxian.materialedittext:library:2.1.4'
     compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
@@ -33,12 +39,7 @@ dependencies {
     compile 'com.android.support:design:24.2.0'
     compile 'com.iarcuschin:simpleratingbar:0.1.5'
     compile 'com.getbase:floatingactionbutton:1.10.1'
-    compile 'com.google.android.gms:play-services-auth:9.8.0'
-
-    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
-
-
-
+    compile 'com.google.android.gms:play-services-auth:9.0.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 }
